--- a/April10Evening/OddEvenSum/02OddEvenSum.csproj
+++ b/April10Evening/OddEvenSum/02OddEvenSum.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>6bbc74f6-2642-4456-9cbd-e89d4e733783</ProjectGuid>
+    <ProjectGuid>{451D21D0-0AB1-4FEF-A93B-326678639AD7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Volleyball</RootNamespace>
-    <AssemblyName>Volleyball</AssemblyName>
+    <RootNamespace>OddEvenSum</RootNamespace>
+    <AssemblyName>OddEvenSum</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,11 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="OddEvenSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
