--- a/Homework/01-Defining-Classes-Homework/Problem-02-Laptop-Shop/Problem-02-Laptop-Shop.csproj
+++ b/Homework/01-Defining-Classes-Homework/Problem-02-Laptop-Shop/Problem-02-Laptop-Shop.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Battery.cs" />
+    <Compile Include="Laptop.cs" />
     <Compile Include="LaptopShop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
