--- a/Homework/01-Defining-Classes-Homework/Problem-03-PC-Catalog/Problem-03-PC-Catalog.csproj
+++ b/Homework/01-Defining-Classes-Homework/Problem-03-PC-Catalog/Problem-03-PC-Catalog.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Component.cs" />
+    <Compile Include="Computer.cs" />
     <Compile Include="Catalog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
