--- a/Homework/01-Defining-Classes-Homework/01Persons/01Persons.csproj
+++ b/Homework/01-Defining-Classes-Homework/01Persons/01Persons.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Person.cs" />
-    <Compile Include="Persons.cs" />
+    <Compile Include="PersonsMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
