--- a/Homework/02-Static-Members-and-Namespaces-Homework/02DistanceCalculator/02DistanceCalculator.csproj
+++ b/Homework/02-Static-Members-and-Namespaces-Homework/02DistanceCalculator/02DistanceCalculator.csproj
@@ -41,11 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DistanceCalculator.cs" />
     <Compile Include="DistanceCalculatorMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\01Point3D\01Point3D.csproj">
+      <Project>{8af6f759-cfd0-4f63-97ee-cbac3f36983c}</Project>
+      <Name>01Point3D</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
