--- a/Homework/03-Inheritance-and-Abstraction-Homework/03Animals/03Animals.csproj
+++ b/Homework/03-Inheritance-and-Abstraction-Homework/03Animals/03Animals.csproj
@@ -41,16 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animal.cs" />
+    <Compile Include="Models\Animal.cs" />
     <Compile Include="AnimalsMain.cs" />
-    <Compile Include="Cat.cs" />
-    <Compile Include="Dog.cs" />
-    <Compile Include="Frog.cs" />
-    <Compile Include="Gender.cs" />
-    <Compile Include="ISound.cs" />
-    <Compile Include="Kitten.cs" />
+    <Compile Include="Models\Cat.cs" />
+    <Compile Include="Models\Dog.cs" />
+    <Compile Include="Models\Frog.cs" />
+    <Compile Include="Models\Gender.cs" />
+    <Compile Include="Contracts\ISound.cs" />
+    <Compile Include="Models\Kitten.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tomcat.cs" />
+    <Compile Include="Models\Tomcat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
