--- a/Homework/03-Inheritance-and-Abstraction-Homework/02HumanStudentAndWorker/02HumanStudentAndWorker.csproj
+++ b/Homework/03-Inheritance-and-Abstraction-Homework/02HumanStudentAndWorker/02HumanStudentAndWorker.csproj
@@ -42,10 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HSWMain.cs" />
-    <Compile Include="Human.cs" />
+    <Compile Include="Models\Human.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="Worker.cs" />
+    <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
