Override some engine methods

--- a/Homework/04-Encapsulation-and-Polymorphism/TheSlum-Skeleton/TheSlum.csproj
+++ b/Homework/04-Encapsulation-and-Polymorphism/TheSlum-Skeleton/TheSlum.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Bonus.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="GameEngine\Engine.cs" />
-    <Compile Include="GameEngine\FinalEngine.cs" />
+    <Compile Include="GameEngine\EngineTurbo.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
     <Compile Include="Interfaces\IHeal.cs" />
