--- a/Homework/05-Other-Types-in-OOP-Homework/04GenericListVersion/04GenericListVersion.csproj
+++ b/Homework/05-Other-Types-in-OOP-Homework/04GenericListVersion/04GenericListVersion.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ACC20816-F78C-4F29-87FE-D3CEDA96AEB4}</ProjectGuid>
+    <ProjectGuid>{43EE24B7-EDB9-496E-9124-93CA52E0BDC9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03GenericList</RootNamespace>
-    <AssemblyName>03GenericList</AssemblyName>
+    <RootNamespace>_04GenericListVersion</RootNamespace>
+    <AssemblyName>04GenericListVersion</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,10 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GenericList.cs" />
-    <Compile Include="GenericListMain.cs" />
+    <Compile Include="VersionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GenericListVersion.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
