--- a/Homework/05-Delegates-and-Events-Homework/01InterestCalculator/01InterestCalculator.csproj
+++ b/Homework/05-Delegates-and-Events-Homework/01InterestCalculator/01InterestCalculator.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{43EE24B7-EDB9-496E-9124-93CA52E0BDC9}</ProjectGuid>
+    <ProjectGuid>{CE7B3A6E-8AA6-4118-B0FA-A3245D524D9E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_04GenericListVersion</RootNamespace>
-    <AssemblyName>04GenericListVersion</AssemblyName>
+    <RootNamespace>_01InterestCalculator</RootNamespace>
+    <AssemblyName>01InterestCalculator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VersionAttribute.cs" />
+    <Compile Include="InterestCalculator.cs" />
+    <Compile Include="InterestCalculatorMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
