--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.iml
 
 # Build results
 [Dd]ebug/
@@ -18,6 +19,8 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+.idea/
+out/
 
 # Roslyn cache directories
 *.ide/
