--- a/15-Code-Optimization-Homework/Operations-Performance-Tests/SortTests/03SortTests.csproj
+++ b/15-Code-Optimization-Homework/Operations-Performance-Tests/SortTests/03SortTests.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortAlgorithms.cs" />
     <Compile Include="SortTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
