Practice exam Mass Effect

--- a/Practice/Exams/OOP-Exam-01June2015/MassEffect/MassEffect.csproj
+++ b/Practice/Exams/OOP-Exam-01June2015/MassEffect/MassEffect.csproj
@@ -54,10 +54,6 @@
     <Compile Include="Engine\Factories\ShipFactory.cs" />
     <Compile Include="Exceptions\ShipException.cs" />
     <Compile Include="GameObjects\Enhancements\EnhancementType.cs" />
-    <Compile Include="GameObjects\Projectiles\Laser.cs" />
-    <Compile Include="GameObjects\Projectiles\ShieldReaver.cs" />
-    <Compile Include="GameObjects\Projectiles\PenetrationShell.cs" />
-    <Compile Include="GameObjects\Ships\Ship.cs" />
     <Compile Include="GameObjects\Ships\StarshipType.cs" />
     <Compile Include="Exceptions\InsufficientFuelException.cs" />
     <Compile Include="Exceptions\LocationOutOfRangeException.cs" />
@@ -73,10 +69,8 @@
     <Compile Include="GameObjects\Locations\StarSystem.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="ClassDiagram.cd" />
+    <Folder Include="GameObjects\Projectiles\" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
