--- a/Practice/Exams/OOP-Exam-01Mar2015/ConsoleForum/ConsoleForum.csproj
+++ b/Practice/Exams/OOP-Exam-01Mar2015/ConsoleForum/ConsoleForum.csproj
@@ -43,22 +43,9 @@
   <ItemGroup>
     <Compile Include="Commands\AbstractCommand.cs" />
     <Compile Include="Commands\Exceptions\CommandException.cs" />
-    <Compile Include="Commands\ExitCommand.cs" />
     <Compile Include="Commands\Factories\CommandFactory.cs" />
-    <Compile Include="Commands\LoginCommand.cs" />
-    <Compile Include="Commands\LogoutCommand.cs" />
-    <Compile Include="Commands\MakeBestAnswerCommand.cs" />
-    <Compile Include="Commands\PostAnswerCommand.cs" />
-    <Compile Include="Commands\PostQuestionCommand.cs" />
     <Compile Include="Commands\RegisterCommand.cs" />
-    <Compile Include="Commands\ShowQuestionsCommand.cs" />
-    <Compile Include="Commands\OpenQuestionCommand.cs" />
     <Compile Include="ConsoleForumMain.cs" />
-    <Compile Include="Entities\Posts\BestAnswers.cs" />
-    <Compile Include="Entities\Posts\Answer.cs" />
-    <Compile Include="Entities\Posts\Post.cs" />
-    <Compile Include="Entities\Posts\Question.cs" />
-    <Compile Include="Entities\Users\Administrator.cs" />
     <Compile Include="Entities\Users\User.cs" />
     <Compile Include="Contracts\IAdministrator.cs" />
     <Compile Include="Contracts\IAnswer.cs" />
@@ -75,9 +62,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Entities\Posts\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
