--- a/Practice/Exams/OOP-Exam-01Mar2015/ConsoleForum/ConsoleForum.csproj
+++ b/Practice/Exams/OOP-Exam-01Mar2015/ConsoleForum/ConsoleForum.csproj
@@ -44,8 +44,20 @@
     <Compile Include="Commands\AbstractCommand.cs" />
     <Compile Include="Commands\Exceptions\CommandException.cs" />
     <Compile Include="Commands\Factories\CommandFactory.cs" />
+    <Compile Include="Commands\ExitCommand.cs" />
+    <Compile Include="Commands\OpenQuestionCommand.cs" />
+    <Compile Include="Commands\MakeBestAnswerCommand.cs" />
+    <Compile Include="Commands\PostAnswerCommand.cs" />
+    <Compile Include="Commands\PostQuestionCommand.cs" />
+    <Compile Include="Commands\ShowQuestionsCommand.cs" />
+    <Compile Include="Commands\LogoutCommand.cs" />
+    <Compile Include="Commands\LoginCommand.cs" />
     <Compile Include="Commands\RegisterCommand.cs" />
     <Compile Include="ConsoleForumMain.cs" />
+    <Compile Include="Entities\Posts\BestAnswer.cs" />
+    <Compile Include="Entities\Posts\Post.cs" />
+    <Compile Include="Entities\Posts\Answer.cs" />
+    <Compile Include="Entities\Posts\Question.cs" />
     <Compile Include="Entities\Users\User.cs" />
     <Compile Include="Contracts\IAdministrator.cs" />
     <Compile Include="Contracts\IAnswer.cs" />
@@ -58,13 +70,11 @@
     <Compile Include="Contracts\IPost.cs" />
     <Compile Include="Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Constants.cs" />
     <Compile Include="Utility\PasswordUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\Posts\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
