Extend Console Forum

--- a/Practice/Exams/OOP-Exam-01Mar2015/ConsoleForum/ConsoleForum.csproj
+++ b/Practice/Exams/OOP-Exam-01Mar2015/ConsoleForum/ConsoleForum.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Contracts\IAnswer.cs" />
     <Compile Include="Contracts\ICommand.cs" />
     <Compile Include="Contracts\IExecutable.cs" />
+    <Compile Include="ExtendedForum.cs" />
     <Compile Include="Forum.cs" />
     <Compile Include="Contracts\IForum.cs" />
     <Compile Include="Contracts\IQuestion.cs" />
