--- a/Homework/02-Linear-Data-Structures-Lists-Homework/LinearDataStructures/07ImplementLinkedList/07ImplementLinkedList.csproj
+++ b/Homework/02-Linear-Data-Structures-Lists-Homework/LinearDataStructures/07ImplementLinkedList/07ImplementLinkedList.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ImplementLinkedList.cs" />
+    <Compile Include="LinkedList.cs" />
+    <Compile Include="ListNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
