--- a/Homework/03-Linear-Data-Structures-Stacks-and-Queues-Homework/StacksAndQueues/03ImplementArrayBasedStack/03ImplementArrayBasedStack.csproj
+++ b/Homework/03-Linear-Data-Structures-Stacks-and-Queues-Homework/StacksAndQueues/03ImplementArrayBasedStack/03ImplementArrayBasedStack.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayStack.cs" />
+    <Compile Include="ArrayStackMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
