--- a/Homework/01-Entity-Framework-Homework/EntityFramework/02EmployeeDAOClass/App.config
+++ b/Homework/01-Entity-Framework-Homework/EntityFramework/02EmployeeDAOClass/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="SoftUniEntities" connectionString="metadata=res://*/SoftUniModel.csdl|res://*/SoftUniModel.ssdl|res://*/SoftUniModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=SoftUni;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SoftUniEntities" connectionString="metadata=res://*/SoftUniModel.csdl|res://*/SoftUniModel.ssdl|res://*/SoftUniModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SoftUni;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
