--- a/Homework/02-EF-Code-First/EntityFrameworkCodeFirst/01StudentSystemModels/01StudentSystemModels.csproj
+++ b/Homework/02-EF-Code-First/EntityFrameworkCodeFirst/01StudentSystemModels/01StudentSystemModels.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Homework.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="License.cs" />
     <Compile Include="Resource.cs" />
     <Compile Include="ResourceType.cs" />
     <Compile Include="Student.cs" />
