Solve homework 06 problem 04 ATM Transactions History

--- a/Homework/04-Transactions-in-EF/ATMDatabase/06ATMTransactionsHistory/06ATMTransactionsHistory.csproj
+++ b/Homework/04-Transactions-in-EF/ATMDatabase/06ATMTransactionsHistory/06ATMTransactionsHistory.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F871FA4F-952C-4C54-8EC8-BD5FF3F706C3}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{AD137BB5-F7C9-44AD-9299-95165B2058DB}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ATMDatabase</RootNamespace>
-    <AssemblyName>04ATMDatabase</AssemblyName>
+    <AssemblyName>06ATMTransactionsHistory</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,16 +33,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,54 +48,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ATMEntities.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ATMEntities.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ATMEntities.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ATMEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ATMEntities.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ATMEntities.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="CardAccount.cs">
-      <DependentUpon>ATMEntities.tt</DependentUpon>
-    </Compile>
+    <Compile Include="ATMTransactionsHistory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TransactionHistory.cs">
-      <DependentUpon>ATMEntities.tt</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="ATMEntities.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ATMEntities.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.Config" />
-    <None Include="ATMEntities.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ATMEntities.edmx</DependentUpon>
-      <LastGenOutput>ATMEntities.Context.cs</LastGenOutput>
-    </None>
-    <None Include="ATMEntities.edmx.diagram">
-      <DependentUpon>ATMEntities.edmx</DependentUpon>
-    </None>
-    <None Include="ATMEntities.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ATMEntities.edmx</DependentUpon>
-      <LastGenOutput>ATMEntities.cs</LastGenOutput>
-    </None>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <ProjectReference Include="..\04ATMDatabase\04ATMDatabase.csproj">
+      <Project>{f871fa4f-952c-4c54-8ec8-bd5ff3f706c3}</Project>
+      <Name>04ATMDatabase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\05TransactionalATMWithdrawal\05TransactionalATMWithdrawal.csproj">
+      <Project>{709e0de0-0e4c-476e-a2d5-b74f41e80d8e}</Project>
+      <Name>05TransactionalATMWithdrawal</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
