--- a/01-Web-Services-SOA-and-REST/WebServices/DistanceCalculatorSOAPClient/App.config
+++ b/01-Web-Services-SOA-and-REST/WebServices/DistanceCalculatorSOAPClient/App.config
@@ -12,8 +12,7 @@
         <client>
             <endpoint address="http://localhost:1709/ServiceDistanceCalculator.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceDistanceCalculator"
-                contract="ServiceReferenceCalculator.IServiceDistanceCalculator"
-                name="BasicHttpBinding_IServiceDistanceCalculator" />
+                contract="DistanceService.IServiceDistanceCalculator" name="BasicHttpBinding_IServiceDistanceCalculator" />
         </client>
     </system.serviceModel>
 </configuration>
