--- a/Homework/02-ASP.NET-Web-API/ASP.NETWebAPI/Data/02Data.csproj
+++ b/Homework/02-ASP.NET-Web-API/ASP.NETWebAPI/Data/02Data.csproj
@@ -51,6 +51,7 @@
     <Compile Include="BookShopContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\Source.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -61,6 +62,11 @@
       <Project>{4352c877-25bf-4f18-9e96-9cb12ee0ab3d}</Project>
       <Name>01Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Source\authors.txt" />
+    <Content Include="Source\books.txt" />
+    <Content Include="Source\categories.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
