Solve homework 02 problem 01 Book Shop Service

--- a/Homework/02-ASP.NET-Web-API/ASP.NETWebAPI/Service/03Service.csproj
+++ b/Homework/02-ASP.NET-Web-API/ASP.NETWebAPI/Service/03Service.csproj
@@ -198,15 +198,21 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AuthorsController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\BooksController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
+    <Compile Include="Models\BindingModels\CategoryBindingModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountBindingModels.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\AuthorBindingModels.cs" />
-    <Compile Include="Models\AuthorViewModels.cs" />
-    <Compile Include="Models\BookViewModels.cs" />
+    <Compile Include="Models\BindingModels\AccountBindingModels.cs" />
+    <Compile Include="Models\ViewModels\AccountViewModels.cs" />
+    <Compile Include="Models\BindingModels\AuthorBindingModels.cs" />
+    <Compile Include="Models\ViewModels\AuthorViewModels.cs" />
+    <Compile Include="Models\BindingModels\BookBindingModels.cs" />
+    <Compile Include="Models\ViewModels\BookViewModels.cs" />
+    <Compile Include="Models\ViewModels\CategoryViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
@@ -269,9 +275,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
