--- a/Homework/02-ASP.NET-Web-API/ASP.NETWebAPI/Service/03Service.csproj
+++ b/Homework/02-ASP.NET-Web-API/ASP.NETWebAPI/Service/03Service.csproj
@@ -201,19 +201,21 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
+    <Compile Include="Controllers\PurchaseController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Models\BindingModels\CategoryBindingModel.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BindingModels\AccountBindingModels.cs" />
+    <Compile Include="Models\BindingModels\RoleBindingModels.cs" />
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\BindingModels\AuthorBindingModels.cs" />
     <Compile Include="Models\ViewModels\AuthorViewModels.cs" />
     <Compile Include="Models\BindingModels\BookBindingModels.cs" />
     <Compile Include="Models\ViewModels\BookViewModels.cs" />
     <Compile Include="Models\ViewModels\CategoryViewModel.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
