Solve exam preparation Issue Tracker

--- a/My-Exam-05-June-2015-Issue-Tracker/IssueTracker/IssueTracker.csproj
+++ b/My-Exam-05-June-2015-Issue-Tracker/IssueTracker/IssueTracker.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>IssueTracker</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -44,24 +59,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\ICommand.cs" />
+    <Compile Include="Contracts\IEndpoint.cs" />
     <Compile Include="Contracts\IIssueTrackerData.cs" />
     <Compile Include="Contracts\IEngine.cs" />
     <Compile Include="Contracts\IIssueTracker.cs" />
+    <Compile Include="Contracts\IUserInterface.cs" />
     <Compile Include="Core\Engine.cs" />
-    <Compile Include="Core\CommandProcessor.cs" />
-    <Compile Include="Core\Command.cs" />
+    <Compile Include="Core\EndpointActionDispatcher.cs" />
+    <Compile Include="Core\Endpoint.cs" />
     <Compile Include="IssueTrackerMain.cs" />
     <Compile Include="Enumerations\IssuePriority.cs" />
+    <Compile Include="UserInterface\ConsoleUserInterface.cs" />
+    <Compile Include="Utilities\Constants.cs" />
+    <Compile Include="Utilities\Messages.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Issue.cs" />
-    <Compile Include="Models\IssueTracker.cs" />
-    <Compile Include="Models\IssueTrackerData.cs" />
+    <Compile Include="IssueTracker.cs" />
+    <Compile Include="Data\IssueTrackerData.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\HashUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
