Solve Lab Online Shop Service

--- a/Practice/Labs/02-Online-Shop/2. ASP.NET-Web-API-Online-Shop/OnlineShop.Client/OnlineShop.Client.csproj
+++ b/Practice/Labs/02-Online-Shop/2. ASP.NET-Web-API-Online-Shop/OnlineShop.Client/OnlineShop.Client.csproj
@@ -45,6 +45,9 @@
     <Reference Include="Microsoft.AspNet.Identity.EntityFramework">
       <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.105.2.2\lib\net45\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
