--- a/iCart/public/.htaccess
+++ b/iCart/public/.htaccess
@@ -3,5 +3,6 @@
     RewriteCond %{REQUEST_URI} !^/content/.*$
     RewriteCond %{REQUEST_URI} !^/favicon\.ico$
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule .* index.php/$0 [PT,L]
 </IfModule>
