--- a/Homework/01-ASP.NET-MVC-Introduction/Twitter/Twitter.Data/Twitter.Data.csproj
+++ b/Homework/01-ASP.NET-MVC-Introduction/Twitter/Twitter.Data/Twitter.Data.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IRepository.cs" />
+    <Compile Include="Contracts\ITwitterContext.cs" />
     <Compile Include="Contracts\ITwitterData.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
