Update UsersController and routes

--- a/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
+++ b/Homework/03-ASP.NET-MVC-Architecture/Twitter/Twitter.App/Twitter.App.csproj
@@ -269,19 +269,14 @@
     <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\SendCode.cshtml" />
     <Content Include="Views\Account\VerifyCode.cshtml" />
-    <Content Include="Views\Users\AddPhoneNumber.cshtml" />
     <Content Include="Views\Users\ChangePassword.cshtml" />
-    <Content Include="Views\Users\Index.cshtml" />
-    <Content Include="Views\Users\ManageLogins.cshtml" />
+    <Content Include="Views\Users\Profile.cshtml" />
     <Content Include="Views\Users\SetPassword.cshtml" />
-    <Content Include="Views\Users\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Views\Base\" />
     <Folder Include="Views\Notifications\" />
-    <Folder Include="Views\Profile\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
